--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       <div>
 <div class="profile-page">
   <div class="wrapper">
-    <div class="page-header page-header-small" filter-color="red">
+    <div class="page-header page-header-small" filter-color="green">
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/marketing-digital.png')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/photo cv.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#4c78c0"><img src="images/photo cv.jpg" alt="Image"/></a></div>
           <div class="h2 title">SIDALI Samir</div>
           <p class="category text-white"> Marketing digital, Graphic Designer,  mathématiques</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
