--- a/index.html
+++ b/index.html
@@ -68,8 +68,11 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am SIDALI Samir. Web Developer, Graphic Designer and Photographer.</p>
-            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
+            <p>Hello! I am SIDALI Samir. Consultant AMOA IT.</p>
+            <p> Dans mon parcours universitaire, je me suis formé dans trois domaines différents. Mathématiques appliquées (HTML, CSS, management de projet), mathématiques et informatiques (SQL, C++, JavaScript, Power BI)
+               et marketing et communication digitale (Optimisation SEO, dataviz, gestion de projet). 
+               Cette polyvalence est mon atout principal pour comprendre les aspects techniques demandés par le client et pouvoir communiquer aussi, en toute aisance, 
+               avec les différents éléments de l’entreprise. <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -77,23 +80,23 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">24</div>
+              <div class="col-sm-8">36</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">samirsidali24@gmail.com</div>
+              <div class="col-sm-8">sidalisamir86@gmail.com</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+336-0595 rebbi iguezrane</div>
+              <div class="col-sm-8">+336-7353-4895</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">12, Quai des célestins, Paris, France</div>
+              <div class="col-sm-8">75004, Paris, France</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8"> French, English</div>
+              <div class="col-sm-8"> French , English</div>
             </div>
           </div>
         </div>
@@ -292,13 +295,13 @@
 </div>
 <div class="section" id="experience">
   <div class="container cc-experience">
-    <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="h4 text-center mb-4 title">Expériences professionnelles</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>March 2016 - Present</p>
-            <div class="h5">CreativeM</div>
+            <p> 04/09/2017 - 02/09/2023</p>
+            <div class="h5">Enseignanat des mathématiques</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -313,14 +316,14 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>April 2014 - March 2016</p>
-            <div class="h5">WebNote</div>
+            <p>Février 2014 - Juin 2016</p>
+            <div class="h5">Consultant en informatique</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Web Developer</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">Consultant AMOA </div>
+            <p>Développement d'applications Web <br /> Management de projet de l'installation d'une centrale électrique<br /> HTML, CSS, PHP</p>
           </div>
         </div>
       </div>
