--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/marketing-digital.png')"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/photo cv.jpg" alt="#4c78c0"/></a></div>
+          <div class="cc-profile-image"><a href="border : 15px solid #4c78c0"><img src="images/photo cv.jpg" alt="#4c78c0"/></a></div>
           <div class="h2 title">SIDALI Samir</div>
-          <p class="category text-white"> Marketing digital, Graphic Designer,  mathématiques</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">AMOA IT,  mathématiques appliquées</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
