--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p> 04/09/2017 - 02/09/2023</p>
-            <div class="h5">Enseignanat des mathématiques</div>
+            <p> 04/09/2017 - 02/09/2022</p>
+            <div class="h5">Enseignant des mathématiques</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -323,7 +323,13 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Consultant AMOA </div>
-            <p>Développement d'applications Web <br /> Management de projet de l'installation d'une centrale électrique<br /> HTML, CSS, PHP</p>
+            <p>
+              <ul>  
+                <li>Développement d'application web </li>
+                <li> Management du projet d'installation d'une centrale électrique </li>
+                <li> HTML, CSS, PHP</li>
+              </ul> 
+            </p>
           </div>
         </div>
       </div>
@@ -332,14 +338,22 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
-            <p>April 2013 - February 2014</p>
-            <div class="h5">WEBM</div>
+            <p>Janvier 2012 -  Juin 2012</p>
+            <div class="h5">Ingénieur en recherche opérationnelle</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Intern</div>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">Stage</div>
+            <p>
+            <ul> 
+<li> Silots de données : processus de collecte de données</li>
+<li> Le reporting : soutenir la prise de décision</li>
+<li> Effectuer des analyses décisionnelles</li>
+
+            </ul>  
+            
+            </p>
           </div>
         </div>
       </div>
