--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <ul>  
                 <li>Développement d'application web </li>
                 <li> Management du projet d'installation d'une centrale électrique </li>
-                <li> HTML, CSS, PHP</li>
+                <li> MySQL, HTML, CSS, PHP</li>
               </ul> 
             </p>
           </div>
@@ -344,12 +344,13 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Stage</div>
+            <div class="h5"> Stage </div>
             <p>
             <ul> 
 <li> Silots de données : processus de collecte de données</li>
 <li> Le reporting : soutenir la prise de décision</li>
 <li> Effectuer des analyses décisionnelles</li>
+<li> Langages : SQL, Power BI, indices KPI</li>
 
             </ul>  
             
@@ -362,20 +363,25 @@
 </div>
 <div class="section">
   <div class="container cc-education">
-    <div class="h4 text-center mb-4 title">Education</div>
+    <div class="h4 text-center mb-4 title">Formations</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2013 - 2015</p>
+            <p>2022 - présent</p>
             <div class="h5">Master's Degree</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Master of Information Technology</div>
-            <p class="category">University of Computer Science</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">Master en analyse et valorisation des usagers numériques </div>
+            <p class="category">Université de Paris 8</p>
+            <p>
+<li> Marketing et innovation numérique</li>
+<li> Conseils stratégique des dispositifs numériques </li>
+<li> Conception de systèmes de visualisation de données de masse</li>
+
+            </p>
           </div>
         </div>
       </div>
@@ -384,15 +390,20 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2009 - 2013</p>
-            <div class="h5">Bachelor's Degree</div>
+            <p>2007 - 2012</p>
+            <div class="h5">Master en mathématiques et informatique</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Computer Science</div>
-            <p class="category">University of Computer Science</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">Master en modèles et méthodes de décision</div>
+            <p class="category">Université de Mouloud MAMMERI de Tizi-Ouzou</p>
+            <p>
+<li> Langages : JavaScript, SQL, HTML, CSS </li>
+<li> Algorithme et strusture de données</li>
+<li> Systèmes d'exploitation : Linux, Windows</li>
+
+            </p>
           </div>
         </div>
       </div>
@@ -401,15 +412,22 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2007 - 2009</p>
-            <div class="h5">High School</div>
+            <p>2005 - 2011</p>
+            <div class="h5">Ingénieur d'état</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Science and Mathematics</div>
-            <p class="category">School of Secondary board</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">Ingénieur d'état en recherche opérationnelle</div>
+            <p class="category">Université Mouloud MAMMERI de Tizi-Ouzou</p>
+            <p>
+              <li> Optmisation SEO /SEA  </li>
+              <li> Management de projet </li>
+              <li> Statistiques décisionnelle et conventionnelle </li>
+              <li> Théorie des grpahes et des jeux</li>
+              <li> C++, MATLAB, R</li>
+
+            </p>
           </div>
         </div>
       </div>
